--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <h1>Metric Spaces: <a href="Documents/Metric_spaces.pdf">Metric_spaces</a></h1>
         <br>
-        <h1>Mathematical tools to study the movement of rigid bodies: <a href="Documents/rigid_body.pdf">Metric_spaces</a></h1>
+        <h1>Mathematical tools to study the movement of rigid bodies: <a href="Documents/rigid_body.pdf">rigid_body</a></h1>
         <br>
         
 
