--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <br>
         <h1>Mathematical tools to study the movement of rigid bodies: <a href="Documents/rigid_body.pdf">rigid_body</a></h1>
         <br>
-        <h1>PARTICLE TRANSPORT BY DIFFUSIOPHORESIS IN POROUS MEDIA: <a href="Documents/phd_Angelo (35).pdf">diffusiophoresis</a></h1>
+        <h1>Micro and Nanofluidics: <a href="Documents/PhD_Angelo__Copy_.pdf">diffusiophoresis</a></h1>
         <br>
         
 
