--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <br>
         <h1>Micro and Nanofluidics: <a href="Documents/microfluidics_and_nanofluidics.pdf">diffusiophoresis</a></h1>
         <br>
+        <h1>Gamma Convergence: <a href="Documents/gamma_convergence.pdf">Gamma Convergence</a></h1>
+        <br>
         
 
       
