--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           developed CFD codes in the field of nano & microfluidics.
         </p>
         
-        <a href="Documents/cv_en_letters.pdf" class="cta">Download Resume</a> <!-- cliccando sul bottone faccio il download del cv chiamato "cv_en_letters.pdf"che si trova nella cartella "Documents" -->
+        <a href="Documents/Angelantonio_SQUICCIARINI_CV_EN__combined.pdf" class="cta">Download Resume</a> <!-- cliccando sul bottone faccio il download del cv chiamato "cv_en_letters.pdf"che si trova nella cartella "Documents" -->
 
       </div>
     </div>
