--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
       <div class="'papers-bottom">
 
-        <h1>Metric Spaces: <a href="Documents/Metric_spaces.pdf">Metric_spaces</a></h1>
-        <br>
+        <!-- <h1>Metric Spaces: <a href="Documents/Metric_spaces.pdf">Metric_spaces</a></h1> -->
+       
         <h1>Mathematical tools to study the movement of rigid bodies: <a href="Documents/rigid_body.pdf">rigid_body</a></h1>
         <br>
         <h1>Micro and Nanofluidics: <a href="Documents/microfluidics_and_nanofluidics.pdf">diffusiophoresis</a></h1>
