--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <br>
         <h1>Gamma Convergence: <a href="Documents/gamma_convergence.pdf">Gamma Convergence</a></h1>
         <br>
+        <h1>Phase field modelling: <a href="Documents/Phase_field_modelling.pdf">Phase field modelling</a></h1>
+        <br>
         
 
       
