--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         <br>
         <h1>Phase field modelling: <a href="Documents/Phase_field_modelling.pdf">Phase field modelling</a></h1>
         <br>
+        <h1>Microfluidic devices for medical applications: <a href="Documents/SQUICCIARINI_tesi.pdf">Microfluidic devices for medical applications</a></h1>
+        <br>
         
 
       
