--- a/index.html
+++ b/index.html
@@ -86,9 +86,13 @@
         <br>
         <h1>Transport Phenomena: <a href="Documents/document.pdf">Transport Phenomena</a></h1>
         <br>
+        <h1>Inertial Microfluidics: <a href="Documents/SQUICCIARINI_tesi.pdf">Inertial Microfluidics</a></h1>
+        <br>
+        <h1>Metric Spaces: <a href="Documents/Metric_spaces.pdf">Metric Spaces</a></h1>
+        <br>
         
 
-      
+  
     </div>
   </section>
   <!-- End Projects Section -->
